# claw-rl

./: .audit_log.jsonl  .coverage  .gitignore  .last_openclaw_version  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_24H_PLAN.md  DEPLOYMENT_REPORT_v0.8.0.md  INTEGRATION_REPORT.md  JARVIS_REVIEW_REQUEST.md  LICENSE  README.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v2.0.0-beta.2.md  RELEASE_NOTES_v2.0.0-beta.md  RELEASE_NOTES_v2.0.0-rc.3.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_REPORT_v0.5.0.md  ROADMAP.md  SECURITY.md  SPRINT2_PLAN.md  TEST_SUMMARY.md  coverage.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
claude-code-plugin/: .claude-plugin  CLAUDE.md  package-lock.json  package.json  test.mjs  tsconfig.json
claw_rl_plugin/: .gitignore  auto-config.json  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
docs/: ADR-008-framework-independence.md  API_REFERENCE.md  ARCHITECTURE_DECISION_001.md  CLAW_RL_INTEGRATION_PLAN.md  CLAW_RL_REFACTORING_PLAN.md  DEPLOYMENT_COMPLETE_v0.6.0.md  DEPLOYMENT_REPORT_v0.6.0.md  FRIDAY_CONSTITUTION.md  MEMORY.md  MEMORY_ENHANCEMENT.md  PHASE3_PLAN.md  README.md  RELEASE_PLAN_v0.5.0.md  RELEASE_PROCESS.md  RELEASE_RULES.md  SPRINT2_DUAL_AI_AUDIT_REPORT.md  SPRINT3_PLAN.md  TUTORIAL.md  WORKFLOW.md  discussion.md  organize_docs.sh  p0-emotion-dashboard-v1.0.0.md  p1-expression-radar-v1.0.0.md  p2-pillar-collaboration-demo.md  work-log-2026-03-29.md
scripts/: activate.sh  bridge.py  hint_extractor.sh  install.sh  memory_retrieval.sh  pre_flight_check.sh  prm_judge.sh  reward_collector.sh  session_hook.sh  start_daemon.py  stop_daemon.py  test_all.sh  track_openclaw.py  training_loop.sh
skill/: SKILL.md
src/: SKILL.md
tests/: test_ab_testing.py  test_ab_testing_85.py  test_ab_testing_85_push.py  test_ab_testing_extra.py  test_ab_testing_final.py  test_ab_testing_final_push.py  test_ab_testing_more.py  test_adapters.py  test_adaptive_mab.py  test_agent_signal_collector.py  test_anomaly_detection.py  test_applier.py  test_auto_activate.py  test_behavioral_pattern.py  test_benchmark_llm_prm.py  test_binary_rl.py  test_bridge.py  test_bridge_adapters.py  test_bridge_extra.py  test_bridge_final.py  test_bridge_more.py  test_calibration_learning.py  test_config_manager.py  test_consolidation.py  test_context_learning.py  test_contextual_pattern.py  test_cpa_loop.py  test_cpa_loop_phase3.py  test_decision_path.py  test_decision_path_coverage.py  test_decision_path_phase2.py  test_enhanced_binary_rl.py  test_enhanced_opd.py  test_ethics.py  test_evaluation.py  test_executor.py  test_experience_modules.py  test_experience_replay.py  test_fast_learning_loop.py  test_feedback_collector.py  (+52 more)
(+464 files in other folders)
